[NA] fix(st-dropdown-menu): Fix wrong visualization of the right aligned icon (#884)

--- a/projects/egeo/src/theme/components/_dropdown-menu.scss
+++ b/projects/egeo/src/theme/components/_dropdown-menu.scss
@@ -84,6 +84,7 @@
 
       .label-container {
          width: 100%;
+         display: inline-flex;
 
          .label {
             display: inline-flex;
